--- a/notebooks/number_recognition.ipynb
+++ b/notebooks/number_recognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,16 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2"
+    "import cv2\n",
+    "import difflib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +412,7 @@
        " (339, 91, 20, 103)]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +556,7 @@
        "        [  0,   0,   0, ...,   0,   0,   0]]], dtype=uint8)"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,14 +568,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 67ms/step\n"
+      "1/1 [==============================] - 0s 369ms/step\n"
      ]
     }
    ],
@@ -584,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +594,7 @@
        "(6, 10)"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -626,10 +627,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "possibilities = [\"206841\", \"214542\", \"206890\", \"204368\", \"202122\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['206841', '206890', '204368']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "difflib.get_close_matches(number, possibilities)"
+   ]
   },
   {
    "cell_type": "code",
